# docs/swagger.json
@@ -395,7 +395,7 @@
                     "200": {
                         "description": "Successfully retrieved filaments",
                         "schema": {
-                            "$ref": "#/definitions/filaments.FilamentsListResponse"
+                            "$ref": "#/definitions/filaments.ListResponse"
                         }
                     },
                     "500": {
@@ -479,7 +479,7 @@
                     "200": {
                         "description": "Successfully retrieved global filaments",
                         "schema": {
-                            "$ref": "#/definitions/filaments.FilamentsListResponse"
+                            "$ref": "#/definitions/filaments.ListResponse"
                         }
                     },
                     "500": {
@@ -513,7 +513,7 @@
                     "200": {
                         "description": "Successfully retrieved user filaments",
                         "schema": {
-                            "$ref": "#/definitions/filaments.FilamentsListResponse"
+                            "$ref": "#/definitions/filaments.ListResponse"
                         }
                     },
                     "401": {
@@ -3485,7 +3485,7 @@
                 }
             }
         },
-        "filaments.FilamentsListResponse": {
+        "filaments.ListResponse": {
             "type": "object",
             "properties": {
                 "filaments": {
